--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,174 @@
 <!DOCTYPE html>
-<html>
-    
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WebPack Skeleton</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Credit card</title>
+    <link rel="stylesheet" href="https://design.swedbankpay.com/v/7.1.0/styles/swedbankpay.css"/>
+    <link rel="stylesheet" href="css/stylesheet.css"/>
 </head>
 
 <body>
-    <div id= "results"></div>
+<div class="container-fluid center bg-variant-1">
+    <fieldset>
+    <legend><span class="h2 ml-4">Credit Card Application</span></legend>
+    <form class="bg-white p-4" style="border-radius: 10px" id="regForm" action="">
+        <div class="steps">
+            <ol>
+                <li class="step">
+                    <div class="steps-number">1</div>Step one
+                    <div class="steps-sub-title">Authorisation</div>
+                </li>
+                <li class="step">
+                    <div class="steps-number">2</div>Step two
+                    <div class="steps-sub-title">Authentication</div>
+                </li>
+                <li class="step">
+                    <div class="steps-number">3</div>
+                    <div class="steps-sub-title">Step three</div>
+                </li>
+                <li class="step">
+                    <div class="steps-number">4</div>
+                    <div class="steps-sub-title">Step four</div>
+                </li>
+                <li class="step">
+                    <div class="steps-number">5</div>
+                    <div class="steps-sub-title">Step five</div>
+                </li>
+                <li class="step">
+                    <div class="steps-number">6</div>
+                    <div class="steps-sub-title">Summary</div>
+                </li>
+            </ol>
+            <div class="steps-responsive">
+                <div class="steps-responsive-text">Step 2</div>
+            </div>
+        </div>
+        <div class="tab">
+            <legend><span class="h2">Step one</span></legend>
+            Name:
+            <p><input placeholder="First name..." oninput="this.className = ''"></p>
+            <p><input placeholder="Last name..." oninput="this.className = ''"></p>
+        </div>
+        <div class="tab">
+            <legend><span class="h2">Step two</span></legend>
+            Contact Info:
+            <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
+            <p><input placeholder="Phone..." oninput="this.className = ''"></p>
+        </div>
+        <div class="tab">
+            <legend><span class="h2">Step three</span></legend>
+            Birthday:
+            <p><input placeholder="dd" oninput="this.className = ''"></p>
+            <p><input placeholder="mm" oninput="this.className = ''"></p>
+            <p><input placeholder="yyyy" oninput="this.className = ''"></p>
+        </div>
+        <div class="tab">
+            <legend><span class="h2">Step four</span></legend>
+            Login Info:
+            <p><input placeholder="Username..." oninput="this.className = ''"></p>
+            <p><input placeholder="Password..." oninput="this.className = ''"></p>
+        </div>
+        <div class="tab">
+            <legend><span class="h2">Step five</span></legend>
+            Login Info:
+            <p><input placeholder="Username..." oninput="this.className = ''"></p>
+            <p><input placeholder="Password..." oninput="this.className = ''"></p>
+        </div>
+        <div id="summary" class="tab">
+            <legend><span class="h2">Summary</span></legend>
+            Summary:
+        </div>
+        <div style="overflow:auto;">
+            <div style="float:right;">
+                <button class="btn btn-secondary" type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+                <button class="btn btn-primary" type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+            </div>
+        </div>
+    </form>
+    </fieldset>
+</div>
+
+<!--<div class="container-fluid center bg-variant-1">
+    <form class="bg-white p-4" style="border-radius: 10px">
+        <div class="steps">
+            <ol>
+                <li class="steps-completed">
+                    <div class="material-icons steps-icon">check</div>
+                    Step one
+                    <div class="steps-sub-title">Authentication</div>
+                </li>
+                <li class="steps-ongoing steps-selected">
+                    <div class="steps-number">2</div>
+                    Step two
+                </li>
+                <li>
+                    <div class="steps-number">3</div>
+                    Step three
+                </li>
+                <li>
+                    <div class="steps-number">4</div>
+                    Step four
+                </li>
+                <li>
+                    <div class="steps-number">5</div>
+                    Step five
+                </li>
+            </ol>
+            <div class="steps-responsive">
+                <div class="steps-responsive-text">Step 2</div>
+            </div>
+        </div>
+        <fieldset>
+            <legend><span class="h2">Step two</span></legend>
+            <div class="row mb-4">
+                <div class="form-groupcol-12 col-sm-6">
+                    <label for="multi-form-example-1">
+                        Label
+                    </label>
+                    <input type="text" class="form-control" id="multi-form-example-1" value>
+                </div>
+                <div class="form-groupcol-12 col-sm-6">
+                    <label for="multi-form-example-2">
+                        Label
+                    </label>
+                    <input type="text" class="form-control" id="multi-form-example-2" value>
+                </div>
+            </div>
+            <div class="form-groupmb-4">
+                <label for="multi-form-example-3">
+                    Label
+                </label>
+                <input type="text" class="form-control" id="multi-form-example-3" value>
+            </div>
+            <fieldset class="radio-group mb-4">
+                <legend>Input label
+                </legend>
+                <div class="radio">
+                    <input type="radio" id="options-1" name="multi-step-radio-example" checked>
+                    <label for="options-1">Option 1</label>
+                </div>
+                <div class="radio">
+                    <input type="radio" id="options-2" name="multi-step-radio-example">
+                    <label for="options-2">Option 2</label>
+                </div>
+                <div class="radio">
+                    <input type="radio" id="options-3" name="multi-step-radio-example">
+                    <label for="options-3">Option 3</label>
+                </div>
+            </fieldset>
+            <div class="d-flex justify-content-between mt-2">
+                <button class="btn btn-secondary" type="button">
+                    <i class="material-icons" aria-hidden="true">arrow_back</i>
+                    <span>Back</span>
+                </button>
+                <button class="btn btn-primary" type="button">Next step</button>
+            </div>
+        </fieldset>
+    </form>
+</div>
+<script src="https://design.swedbankpay.com/v/7.1.0/scripts/dg.js" global="true" autoload="true"></script>-->
+<script src="./index.js" type="application/javascript"></script>
 </body>
+
 </html>
