--- a/src/index.html
+++ b/src/index.html
@@ -8,85 +8,106 @@
     <link rel="stylesheet" href="css/stylesheet.css"/>
 </head>
 
+<!--TODO:
+Nimi (ees- ja perekonnanimi)
+Radio button: country or like a credit card type? Või see maksekohustuse asi?
+Checkbox: read the TOS?
+Drop-down box: Country?
+Textarea: Additional comments/information?
+-->
+
 <body>
 <div class="container-fluid center bg-variant-1">
     <fieldset>
-    <legend><span class="h2 ml-4">Credit Card Application</span></legend>
-    <form class="bg-white p-4" style="border-radius: 10px" id="regForm" action="">
-        <div class="steps">
-            <ol>
-                <li class="step">
-                    <div class="steps-number">1</div>Step one
-                    <div class="steps-sub-title">Authorisation</div>
-                </li>
-                <li class="step">
-                    <div class="steps-number">2</div>Step two
-                    <div class="steps-sub-title">Authentication</div>
-                </li>
-                <li class="step">
-                    <div class="steps-number">3</div>
-                    <div class="steps-sub-title">Step three</div>
-                </li>
-                <li class="step">
-                    <div class="steps-number">4</div>
-                    <div class="steps-sub-title">Step four</div>
-                </li>
-                <li class="step">
-                    <div class="steps-number">5</div>
-                    <div class="steps-sub-title">Step five</div>
-                </li>
-                <li class="step">
-                    <div class="steps-number">6</div>
-                    <div class="steps-sub-title">Summary</div>
-                </li>
-            </ol>
-            <div class="steps-responsive">
-                <div class="steps-responsive-text">Step 2</div>
+        <legend><span class="h2 ml-4">Credit Card Application</span></legend>
+        <form class="bg-white p-4" style="border-radius: 10px" id="regForm" action="">
+            <div class="steps">
+                <ol>
+                    <li class="step">
+                        <div class="steps-number">1</div>
+                        Step one
+                        <div class="steps-sub-title">Name</div>
+                    </li>
+                    <li class="step">
+                        <div class="steps-number">2</div>
+                        Step two
+                        <div class="steps-sub-title">Credit card</div>
+                    </li>
+                    <li class="step">
+                        <div class="steps-number">3</div>
+                        Step three
+                        <div class="steps-sub-title">Phone Number</div>
+                    </li>
+                    <li class="step">
+                        <div class="steps-number">4</div>
+                        Step four
+                        <div class="steps-sub-title">Maksekohustus</div>
+                    </li>
+                    <li class="step">
+                        <div class="steps-number">5</div>
+                        Step five
+                        <div class="steps-sub-title">Additional info</div>
+                    </li>
+                    <li class="step">
+                        <div class="steps-number">6</div>
+                        Summary
+                        <div class="steps-sub-title"></div>
+                    </li>
+                </ol>
+                <div class="steps-responsive">
+                    <div class="steps-responsive-text">Step 2</div>
+                </div>
             </div>
-        </div>
-        <div class="tab">
-            <legend><span class="h2">Step one</span></legend>
-            Name:
-            <p><input placeholder="First name..." oninput="this.className = ''"></p>
-            <p><input placeholder="Last name..." oninput="this.className = ''"></p>
-        </div>
-        <div class="tab">
-            <legend><span class="h2">Step two</span></legend>
-            Contact Info:
-            <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
-            <p><input placeholder="Phone..." oninput="this.className = ''"></p>
-        </div>
-        <div class="tab">
-            <legend><span class="h2">Step three</span></legend>
-            Birthday:
-            <p><input placeholder="dd" oninput="this.className = ''"></p>
-            <p><input placeholder="mm" oninput="this.className = ''"></p>
-            <p><input placeholder="yyyy" oninput="this.className = ''"></p>
-        </div>
-        <div class="tab">
-            <legend><span class="h2">Step four</span></legend>
-            Login Info:
-            <p><input placeholder="Username..." oninput="this.className = ''"></p>
-            <p><input placeholder="Password..." oninput="this.className = ''"></p>
-        </div>
-        <div class="tab">
-            <legend><span class="h2">Step five</span></legend>
-            Login Info:
-            <p><input placeholder="Username..." oninput="this.className = ''"></p>
-            <p><input placeholder="Password..." oninput="this.className = ''"></p>
-        </div>
-        <div id="summary" class="tab">
-            <legend><span class="h2">Summary</span></legend>
-            Summary:
-        </div>
-        <div style="overflow:auto;">
-            <div style="float:right;">
-                <button class="btn btn-secondary" type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-                <button class="btn btn-primary" type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+            <div class="tab">
+                <legend><span class="h2">Step one</span></legend>
+                Name:
+                <p><input placeholder="First name..." oninput="this.className = ''"></p>
+                <p><input placeholder="Last name..." oninput="this.className = ''"></p>
             </div>
-        </div>
-    </form>
+            <div class="tab">
+                <legend><span class="h2">Step two</span></legend>
+                Contact Info:
+                <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
+                <p><input placeholder="Phone..." oninput="this.className = ''"></p>
+            </div>
+            <div class="tab">
+                <legend><span class="h2">Step three</span></legend>
+                Birthday:
+                <p><input placeholder="dd" oninput="this.className = ''"></p>
+                <p><input placeholder="mm" oninput="this.className = ''"></p>
+                <p><input placeholder="yyyy" oninput="this.className = ''"></p>
+            </div>
+            <div class="tab">
+                <legend><span class="h2">Step four</span></legend>
+                Login Info:
+                <p><input placeholder="Username..." oninput="this.className = ''"></p>
+                <p><input placeholder="Password..." oninput="this.className = ''"></p>
+            </div>
+            <div class="tab">
+                <legend><span class="h2">Step five</span></legend>
+                Login Info:
+                <p><input placeholder="Username..." oninput="this.className = ''"></p>
+                <p><input placeholder="Password..." oninput="this.className = ''"></p>
+            </div>
+            <!--TODO: Should be on a separate tab not visible in tabs menu.-->
+            <div id="summary" class="tab">
+                <legend><span class="h2">Summary</span></legend>
+            </div>
+            <div style="overflow:auto;">
+                <div style="float:right;">
+                    <button class="btn btn-secondary" type="button" id="prevBtn" onclick="nextPrev(-1)">Previous
+                    </button>
+                    <button class="btn btn-primary" type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+                </div>
+            </div>
+        </form>
     </fieldset>
+</div>
+
+<!--TODO: Lõpuleht; see, et on edukalt täidetud. -->
+<div hidden id="form-success" class="tab align-content-center mx-auto" style="">
+    <i class="material-icons material-icons">check</i>
+    <legend><span class="h2">Application submitted.</span></legend>
 </div>
 
 <!--<div class="container-fluid center bg-variant-1">
