--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,20 +13,30 @@ Nimi (ees- ja perekonnanimi)
 Radio button: country or like a credit card type? Või see maksekohustuse asi?
 Checkbox: read the TOS?
 Drop-down box: Country?
-Textarea: Additional comments/information?
+Textarea: Something mandatory, if I do a loan, maybe the reason for asking it?
 -->
+<!--TODO: Intro-->
+<!--TODO: Tooltip (at least once)-->
+<!--TODO: Error messages-->
 
-<body>
-<div class="container-fluid center bg-variant-1">
-    <fieldset>
+<body class="bg-variant-1">
+<div class="container-fluid center">
+    <div id="intro" class="bg-white p-4 align-content-center mx-auto mw-100" style="border-radius: 10px; min-height: 25%; min-width: 25%">
         <legend><span class="h2 ml-4">Credit Card Application</span></legend>
-        <form class="bg-white p-4" style="border-radius: 10px" id="regForm" action="">
+        <legend><span class="h5">Press the button to start the application process.</span></legend>
+        <div style="float: right">
+            <button class="btn btn-primary" type="button" id="initForm" onclick="initForm()">Start</button>
+        </div>
+    </div>
+    <fieldset id="fieldset" style="display: none;">
+        <legend><span class="h2 ml-4">Credit Card Application</span></legend>
+        <form class="bg-white p-4" style="border-radius: 10px" id="regForm">
             <div class="steps">
                 <ol>
                     <li class="step">
                         <div class="steps-number">1</div>
                         Step one
-                        <div class="steps-sub-title">Name</div>
+                        <div class="steps-sub-title">Full Name</div>
                     </li>
                     <li class="step">
                         <div class="steps-number">2</div>
@@ -55,34 +65,52 @@ Textarea: Additional comments/information?
             </div>
             <div class="tab">
                 <legend><span class="h2">Step one</span></legend>
-                Name:
-                <p><input placeholder="First name..." oninput="this.className = ''"></p>
-                <p><input placeholder="Last name..." oninput="this.className = ''"></p>
-            </div>
-            <div class="tab">
-                <legend><span class="h2">Step two</span></legend>
-                Contact Info:
-                <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
-                <p><input placeholder="Phone..." oninput="this.className = ''"></p>
+                <label>Name:</label>
+                <p><input placeholder="John Doe" oninput="this.className = ''"></p>
             </div>
             <div class="tab">
                 <legend><span class="h2">Step three</span></legend>
-                Birthday:
-                <p><input placeholder="dd" oninput="this.className = ''"></p>
-                <p><input placeholder="mm" oninput="this.className = ''"></p>
-                <p><input placeholder="yyyy" oninput="this.className = ''"></p>
+                <label for="textarea">Additional comments/information:</label>
+                <textarea class="w-100" id="textarea" placeholder="Additional info..." oninput="this.className = 'w-100'"></textarea>
             </div>
             <div class="tab">
                 <legend><span class="h2">Step four</span></legend>
-                Login Info:
-                <p><input placeholder="Username..." oninput="this.className = ''"></p>
-                <p><input placeholder="Password..." oninput="this.className = ''"></p>
+                <div class="radio">
+                    <input type="radio" id="options-1" value="1" name="multi-step-radio-example">
+                    <label for="options-1">Option 1</label>
+                </div>
+                <div class="radio">
+                    <input type="radio" id="options-2" value="2" name="multi-step-radio-example">
+                    <label for="options-2">Option 2</label>
+                </div>
+                <div class="radio">
+                    <input type="radio" id="options-3" value="3" name="multi-step-radio-example">
+                    <label for="options-3">Option 3</label>
+                </div>
             </div>
             <div class="tab">
                 <legend><span class="h2">Step five</span></legend>
-                Login Info:
-                <p><input placeholder="Username..." oninput="this.className = ''"></p>
-                <p><input placeholder="Password..." oninput="this.className = ''"></p>
+                <div class="form-group">
+                    <label>Country:</label>
+                    <select class="form-control">
+                        <option selected disabled hidden>Select country</option>
+                        <option value="Subject 1">Estonia</option>
+                        <option value="Subject 2">Latvia</option>
+                        <option value="Subject 3">Lithuania</option>
+                    </select>
+                </div>
+            </div>
+            <div class="tab">
+                <legend><span class="h2">Step two</span></legend>
+                <div class="checkbox mb-3">
+                    <input id="terms" type="checkbox" oninput="this.className = ''">
+                    <label for="terms">I have read and accept Swedbank's
+                        <a target="_blank" href="https://www.swedbank.ee/private/home/important/gdpr?language=ENG" class="icon-link">
+                            <span class="mr-2">privacy policy</span>
+                            <i class="material-icons" aria-hidden="true">launch</i>
+                        </a>
+                    </label>
+                </div>
             </div>
             <!--TODO: Should be on a separate tab not visible in tabs menu.-->
             <div id="summary" class="tab">
@@ -98,7 +126,7 @@ Textarea: Additional comments/information?
                 <legend><span class="h4">Question 5:</span></legend>
                 <legend><span id="answer5" class="h5">Answer 5</span></legend>
             </div>
-            <div style="overflow:auto;">
+            <div class="mt-2" style="overflow:auto;">
                 <div style="float:right;">
                     <button class="btn btn-secondary" type="button" id="prevBtn" onclick="nextPrev(-1)">Previous
                     </button>
@@ -106,14 +134,13 @@ Textarea: Additional comments/information?
                 </div>
             </div>
         </form>
-        <div id="form-success" class="bg-white p-4 align-content-center mx-auto" style="display: none">
+        <div id="form-success" class="bg-white p-4 align-content-center mx-auto mw-100" style="display: none; border-radius: 10px; min-height: 18em; min-width: 30em">
             <i class="material-icons material-icons">check</i>
             <legend><span class="h2">Application submitted.</span></legend>
-            <legend><span class="h6">You can close the tab.</span></legend>
+            <legend><span class="h5">You can close the tab.</span></legend>
         </div>
     </fieldset>
 </div>
-<script src="https://design.swedbankpay.com/v/7.1.0/scripts/dg.js" global="true" autoload="true"></script>-->
 <script src="./index.js" type="application/javascript"></script>
 </body>
 
