--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,15 @@
 </head>
 
 <!--TODO: Error messages-->
-
-<!--TODO: Car Lease
-TODO: Input: Representative Name/Price
-TODO: Radio button: Purpose of financing
-TODO: Textarea: Car details: Make/model/year of release/Price etc
-TODO: Checkbox: Casco insurance/Third party liability insurance
-TODO: Drop-down box: Type of lease
--->
-
-<!--TODO: Change button style-->
-<!--TODO: Remove steps if going backwards and changing stuff to invalid-->
+<!--TODO: Fix JS code-->
+<!--TODO: Clear unused CSS-->
 
 <body class="bg-variant-1">
 <div class="container-fluid center">
     <div id="intro">
         <h1 class="card-header">Car Lease</h1>
         <div class="bg-white p-2-0 bg-white align-content-center mx-auto mw-100" style="border-radius: 10px;">
-            <h1 id="title">What business requires, car lease delivers!</h1>
+            <h1 id="title">What business requires,<br> car lease delivers!</h1>
             <div class="my-4 bold">
                 <p class="mb-0">Especially favourable conditions for environmentally friendly cars!</p>
                 <p>Leasing interest rate from 1.49% + 6 month Euribor.</p>
@@ -133,11 +124,10 @@ TODO: Drop-down box: Type of lease
                 <button style="float: right" class="btn btn-next" type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
             </div>
         </form>
-        <div id="form-success" class="bg-white p-4 align-content-center mx-auto mw-100"
-             style="display: none; border-radius: 10px; min-height: 18em; min-width: 30em">
-            <i class="material-icons material-icons">check</i>
-            <legend><span class="h2">Application submitted.</span></legend>
-            <legend><span class="h5">You can close the tab.</span></legend>
+        <div id="form-success" class="bg-white p-4 align-content-center mx-auto mw-100" style="display: none; border-radius: 10px;">
+            <h2 class="mt-3 mb-5">Application submitted.</h2>
+            <p class="h5 mt-5 mb-0">You can close the tab.</p>
+            <p class="h5 mt-3">We'll be contacting you soon after reviewing the application!</p>
         </div>
     </fieldset>
 </div>
