--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Car leasing - Swedbank</title>
     <link rel="shortcut icon" href="/icons/favicon.ico" />
     <link rel="stylesheet" href="css/stylesheet.css"/>
-    <link rel="stylesheet" href="css/swedbankpay.css"/>
-    <!--<link rel="stylesheet" href="css/clean-swedbankpay.css"/>-->
+    <!--<link rel="stylesheet" href="css/swedbankpay.css"/>-->
+    <link rel="stylesheet" href="css/clean-swedbankpay.css"/>
 </head>
 
 <!--TODO: Fix JS code-->
